<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/logInCV"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/design_default_color_primary_variant"
        app:cardCornerRadius="@dimen/_40dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_40dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/_25dp"
            android:src="@drawable/ic_login"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/login"
            android:layout_gravity="bottom|center"
            />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/galleryCV"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/design_default_color_primary_variant"
        app:cardCornerRadius="@dimen/_40dp"
        android:layout_margin="@dimen/_40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/_25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/gallery"
            android:layout_gravity="bottom|center"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/listCV"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="@dimen/_40dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/design_default_color_primary_variant"
        app:cardCornerRadius="@dimen/_40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryCV">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/_25dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/users"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/exitCV"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="@dimen/_40dp"
        android:backgroundTint="@color/design_default_color_primary_variant"
        app:cardCornerRadius="@dimen/_40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInCV">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_25dp"
            android:src="@drawable/ic_exit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>